src/main/resources/passworld/styles/styles.css
/* Estilo básico para el ProgressBar de splash screen */
.loading-bar {
    -fx-background-color: transparent; /* Fondo transparente por defecto */
    -fx-pref-height: 10px;  /* Altura del ProgressBar */
    -fx-pref-width: 300px;  /* Ancho del ProgressBar */
}

/* Estilo del track */
.loading-bar .track {
    -fx-background-color: transparent; /* Fondo transparente por defecto */
    -fx-border-color: transparent;  /* Eliminar bordes del track */
    -fx-background-radius: 10px;  /* Bordes redondeados */
}

.loading-bar .bar {
    -fx-background-color: black;
}

/* Botones de icono */
.icon-button {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-max-width: 20px;
    -fx-max-height: 20px;
    -fx-min-width: 20px; /* Asegura que el botón no se haga más pequeño que 20px */
    -fx-min-height: 20px;
    -fx-padding: 0; /* Elimina cualquier padding */
}

/* Estilo para los iconos */
.icon {
    -fx-fit-width: 15px; /* Asegura que la imagen se ajuste exactamente */
    -fx-fit-height: 15px;
    -fx-preserve-ratio: true; /* Mantiene la proporción de la imagen */
}

/* Estilo de los botones primarios */
.button.primary {
    -fx-background-color: #000000;
    -fx-text-fill: #ffffff;
    -fx-border-width: 1px;
    -fx-border-color: #000000;
    -fx-padding: 8px 16px; /* Padding */
    -fx-font-size: 14px; /* Tamaño de fuente para los botones */
}

/* Estilo de los botones ocultos */
.button.hidden {
    -fx-opacity: 0;      /* Hacer el botón completamente transparente */
    -fx-min-width: 0;    /* Eliminar el ancho mínimo */
    -fx-min-height: 0;   /* Eliminar la altura mínima */
    -fx-pref-width: 0;   /* Eliminar el ancho preferido */
    -fx-pref-height: 0;  /* Eliminar la altura preferida */
    -fx-max-width: 0;    /* Eliminar el ancho máximo */
    -fx-max-height: 0;   /* Eliminar la altura máxima */
    -fx-padding: 0;      /* Eliminar el relleno */
}

/* Estilo general del ComboBox de idiomas */
.language-selector {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-font-size: 12px;
}

/* Estilo para la celda visible (ítem seleccionado) */
.language-selector .cell:selected {
    -fx-background-color: transparent; /* Fondo transparente solo para la celda visible */
}

/* Estilo de las celdas dentro de la lista desplegable */
.language-selector .list-view .list-cell:filled {
    -fx-background-color: transparent; /* Fondo transparente en la lista desplegable */
}

/* Estilo del ítem seleccionado en la lista desplegable */
.language-selector .list-view .list-cell:filled:selected,
.language-selector .list-view .list-cell:filled:selected:hover {
    -fx-background-color: #d9d9d9;  /* Gris claro */
    -fx-text-fill: #000000;  /* Color de texto negro */
}

/* Estilo del hover en los ítems de la lista desplegable */
.language-selector .list-view .list-cell:hover {
    -fx-background-color: #f0f0f0;  /* Gris claro más suave */
    -fx-text-fill: #000000;  /* Color de texto negro */
}

/* Estilo básico para el ProgressBar de fortaleza de contraseña */
.strength-bar {
    -fx-background-color: transparent; /* Fondo transparente por defecto */
    -fx-pref-height: 10px;  /* Altura del ProgressBar */
    -fx-pref-width: 100px;  /* Ancho del ProgressBar */
}

/* Ocultar el borde no deseado del ProgressBar */
.strength-bar .track {
    -fx-border-color: transparent;  /* Eliminar bordes del track */
    -fx-background-radius: 10px;  /* Bordes redondeados */
    -fx-border-radius: 10px; /* Bordes redondeados */
}

/* Estilo del ProgressBar según la fortaleza */
.strength-bar .bar {
    -fx-background-radius: 10px;  /* Bordes redondeados para la barra de progreso */
    -fx-border-radius: 10px;
    -fx-border-color: transparent;  /* Eliminar borde de la barra */
}

/* Colores específicos según la fortaleza de la contraseña */
.strength-bar.red .bar {
    -fx-background-color: red;  /* Barra roja para una contraseña débil */
}
.strength-bar.orange .bar {
    -fx-background-color: orange;  /* Barra naranja para una contraseña media */
}
.strength-bar.yellowgreen .bar {
    -fx-background-color: yellowgreen;  /* Barra amarillo-verde para una contraseña fuerte */
}
.strength-bar.green .bar {
    -fx-background-color: green;  /* Barra verde para una contraseña muy fuerte */
}

/* Estilo de los TextFields */
.text-field {
    -fx-text-fill: black; /* Color del texto en negro */
    -fx-border-width: 1px; /* Grosor del borde */
    -fx-padding: 5px; /* Espaciado interno */
    -fx-font-size: 14px; /* Tamaño de fuente */
    -fx-background-radius: 5px; /* Bordes redondeados */
}

/* Estilo de los botones */
.button {
    -fx-border-radius: 5px;
    -fx-background-radius: 5px;
}

/* Estilos para VBox */
.vbox {
    -fx-alignment: center; /* Alineación de los elementos en el centro */
}

/* Estilo de los botones de cancelar */
.button.secondary {
    -fx-background-color: transparent;
    -fx-text-fill: #000000; /* Color de texto negro */
    -fx-border-width: 1px;
    -fx-border-color: #000000;
    -fx-padding: 8px 16px;
    -fx-font-size: 14px;
}

/* Estilo del contenedor del Dialog */
.dialog-pane {
    -fx-padding: 10px; /* Espaciado alrededor del contenido */
}

/* Barra de desplazamiento */
.scroll-bar {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-border-radius: 10px;            /* Bordes redondeados */
    -fx-background-radius: 10px;        /* Bordes redondeados */
    -fx-pref-width: 8px;            /* Ancho de la barra de desplazamiento */
}

/* Estilo para el deslizante de la barra de desplazamiento (thumb) */
.scroll-bar .thumb {
    -fx-background-color: #D5D5D5;  /* Fondo gris oscuro para el thumb */
    -fx-background-radius: 10px;    /* Bordes redondeados */
}

/* Estilo de la tabla sin fondo */
.table-view {
    -fx-background-color: transparent;  /* Fondo transparente */
    -fx-focus-color: transparent;  /* Eliminar borde azul por foco en la tabla */
    -fx-faint-focus-color: transparent; /* Eliminar color tenue de foco */
    -fx-border-color: transparent;  /* Eliminar borde alrededor de la tabla */
}

/* Placeholder de la tabla */
.table-view .placeholder {
    -fx-alignment: top-left;
}


/* filas */
.table-row-cell {
    -fx-pref-height: 40px;
    -fx-background-color: transparent;  /* Fondo transparente */
    -fx-border-color: #d5d5d5;  /* Línea separadora entre filas */
    -fx-border-width: 0 0 1px 0;  /* Solo borde inferior */
}

/* Texto de las celdas seleccionadas */
.table-row-cell:selected .text,
.table-cell:selected .text {
    -fx-fill: black; /* Cambia esto al color deseado */
}

/* Celdas seleccionadas */
.table-row-cell:selected,
.table-cell:selected {
    -fx-background-color: #d5d5d5;
}

/* Estilo de las celdas (sin borde y fondo transparente) */
.table-cell {
    -fx-background-color: transparent;  /* Fondo transparente para las celdas */
    -fx-border-color: transparent;  /* Sin bordes */
}

/* Estilo de los Label dentro de cada fila (Descripción y URL) */
.description-label {
    -fx-font-size: 14px;  /* Tamaño de fuente normal para la descripción */
}

.url-label {
    -fx-font-size: 12px;  /* Tamaño de fuente más pequeño para la URL */
    -fx-text-fill: gray;  /* Color gris para la URL */
    -fx-padding: 0;  /* Sin espacio entre las etiquetas */
}

/* ComboBox de selección de orden de contraseñas */
.sort-box {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-max-width: 25px;
    -fx-max-height: 25px;
    -fx-min-width: 25px; /* Asegura que el combo-box no se haga más pequeño que 30px */
    -fx-min-height: 25px;
    -fx-padding: 0; /* Elimina cualquier padding */
}

/* Estilo para los iconos del combo-box de orden de contraseñas */
.sort-icon {
    -fx-fit-width: 18px; /* Asegura que la imagen se ajuste exactamente */
    -fx-fit-height: 18px;
    -fx-preserve-ratio: true; /* Mantiene la proporción de la imagen */
}

.sort-box .arrow-button {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-padding: 0; /* Elimina cualquier padding */
}

.sort-box .arrow {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-padding: 0; /* Elimina cualquier padding */
    -fx-shape: ""; /* Elimina la forma de la flecha */
}

.sort-box .combo-box-base {
    -fx-background-color: transparent; /* Fondo transparente */
    -fx-padding: 0; /* Elimina cualquier padding */
}

.sort-box .combo-box-popup {
    -fx-background-color: #ffffff; /* Color del fondo del popup */
}

/* Estilo para los campos con error (bordes rojos) */
.error-border {
    -fx-border-color: red;
    -fx-border-width: 1;
    -fx-border-radius: 5;
}

/* Estilo para el label de campos obligatorios */
.mandatoryFieldsLabel {
    -fx-font-size: 12px;
    -fx-text-fill: red;
    -fx-font-family: "Helvetica Neue", sans-serif;  /* Fuente Helvetica Neue */
}

